--- a/styles/history.css
+++ b/styles/history.css
@@ -27,3 +27,13 @@ th{
     padding: 0.1rem;
     width: 4rem;
 }
+
+#clearHistoryButton{
+    position: absolute;
+    right: -0.4rem;
+    top: 0.8rem;
+    
+    padding: 0.1rem;
+    width: 4rem;
+}
+
